[Bugfix] Fixed initial freetext height being too large (#7421)

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -118,7 +118,16 @@ input, textarea, select {
   }
 }
 
-
 .freetext-editor .ql-editor {
   padding: 0px;
+}
+
+.ql-editor > p {
+  margin: 0;
+  padding: 0;
+}
+
+.ql-clipboard {
+  width: 0;
+  height: 1px;
 }
