--- a/src/constants/quill.scss
+++ b/src/constants/quill.scss
@@ -56,6 +56,10 @@
 .ql-editor h6 {
   counter-reset: list-1 list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
 }
+.ql-editor p {
+  margin: 0;
+  padding: 0;
+}
 .ql-editor ol,
 .ql-editor ul {
   padding-left: 1.5em;
